refactor(common): enum 패키지 재구성 및 구조 분석 문서 갱신
- common/enums 하위 패키지화: semantic, engine, style, output, request, experience, sort
- role: role/category/{development, business, etc, ...}, role/core, role/metadata 분리
- action: action/category/{development, business, content, ...} 분리
- 출력 관련 enum을 enums/output/으로 이동 (OutputBehaviorType, ResponseShape 등)
- StableKeyedEnum을 common/contract/로, AxisSourceConstants를 common/constants/로 이동
- ToneStyleNormalizer를 common/style/로 이동
- 전역 import 및 참조 경로 수정 (controller, adapter, application, domain, dto, test)
- docs: common-enum-and-structure-analysis.md 최신 구조 반영하여 전면 갱신

Made-with: Cursor