@@ -1,10 +1,55 @@
 package org.example.sharedprompts.domain.prompt.common.enums;
 
-import org.example.sharedprompts.domain.prompt.common.enums.action.*;
-import org.example.sharedprompts.domain.prompt.common.enums.role.*;
+import org.example.sharedprompts.domain.prompt.common.contract.StableKeyedEnum;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.analysis.AnalysisActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.business.BusinessActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.business.CareerActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.business.CustomerSupportActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.content.ContentActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.content.EmailActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.content.RecommendationActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.creative.CreativeActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.design.DesignActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.development.AiMlActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.development.CloudServicesActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.development.CodingActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.development.CybersecurityActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.development.DevOpsActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.development.DevelopmentActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.development.ProgrammingActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.education.EducationActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.etc.EtcActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.etc.HealthFitnessActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.etc.LifestyleActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.etc.SocialActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.marketing.MarketingActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.productivity.PersonalDevelopmentActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.productivity.ProductivityActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.productivity.ShoppingActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.research.ResearchActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.study.StudyActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.action.category.writing.WritingActionType;
+import org.example.sharedprompts.domain.prompt.common.enums.experience.ExperienceLevel;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.business.BusinessRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.business.CustomerSupportRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.content.ContentRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.creative.CreativeRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.design.DesignRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.development.AiMlRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.development.DevelopmentRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.marketing.MarketingRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.productivity.ProductivityRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.etc.SocialRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.study.StudyRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.role.category.writing.WritingRoleType;
+import org.example.sharedprompts.domain.prompt.common.enums.semantic.PromptCategory;
+import org.example.sharedprompts.domain.prompt.common.enums.semantic.TaskDomain;
+import org.example.sharedprompts.domain.prompt.common.enums.style.StyleType;
+import org.example.sharedprompts.domain.prompt.common.enums.style.ToneType;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -15,7 +60,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 class EnumKeyUniquenessTest {
 
     /** 모든 StableKeyedEnum 구현체를 나열하여 전역 키 유일성을 검증한다. */
-    private static final List<Class<? extends Enum<?>>> STABLE_KEYED_ENUM_CLASSES = List.of(
+    private static final List<Class<? extends Enum<?>>> STABLE_KEYED_ENUM_CLASSES = Arrays.asList(
             ToneType.class,
             StyleType.class,
             PromptCategory.class,
